# LewEngine

./: .build-engine.sh.swp  .container  .gitignore  CMakeLists.txt  InstallationLog.txt  README.md  blew  build-engine.sh  package.json
.container/: Dockerfile
.github/workflows/: build.yaml  test.yaml
app/: .gitignore  package.json
config/: app-config.yaml  engine-config.yaml  engine-setup.yaml  server-config.yaml
engine/: CMakeLists.txt
engine/core/: main.cpp
engine/shaders/: dummy.txt
engine/src/: LewEngine.cpp
engine/src/include/: LewEngine.h  Log.h
engine/src/include/components/: dummy.txt.txt
engine/test/: CMakeLists.txt
engine/test/src/: main.cpp
engine/test/src/lib/: Log.cpp  Log.h  Test.cpp  Test.h
env/: linux-variables.env  ming64-variables.env
scripts/: build-engine.sh  linux-variables.env  win-mingw64-setup.sh  win-variables.env
src/: LewEngine.cpp
src/include/components/: dummy.txt  dummy.txt.txt
src/include/ext/: README.md
test/: CMakeLists.txt  main.cpp
test/src/: main.cpp  test.sh
test/src/lib/: Log.cpp  Test.h
